--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,91 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="resume-style.css">
+    
   </head>
   <body>
+  
+    <img src="diogenes.png" >
+    <h1 style="float: right;"><br><br><br>Diogenes of Synopsis<br>
+    <br><br>The original minimalist
+    </h1>
+  
+    <div class="wrapper">
+      <p class="item1">
+        CONTACT <br>
+          bucketman101@aol.com<br>
+          <br>
+          <br>
+        EDUCATION<br>
+          Student of Antisthenes<br>
+          Mintmaster<br>
+          <br>
+          <br>
+        WORK REFERENCES<br>
+          Lives and opinions of eminent philosophers<br>
+          Cynic epistles<br>
+      </p>
+      <p class="item2">ACHIEVEMENTS<br>
+        One of main contributors to Cynicism<br>
+        Accredited to use the word "cosmopolitan" first<br>
+      </p>
+      <p class="item3">CORE SKILLS<br>
+        Love of virtue<br>
+        Unconcerened with wealth<br>
+        Making a cult of indifference </p>
+      <p class="item5">WORK HISTORY</p>
+      <p class="item8">PHILOSOPHY SCHOOL OWNER<br>
+        SLAVE<br>
+        PHILOSOPHER<br>
+        MINTMASTER<br>
+      </p>
+      
+    </div>
+  </span>
+  <!-- 
+    <span>
+    <img src="diogenes.webp" class="diogenes">
+    <p class="diogenes_title">Diogenes of Synopsys
+    The original minimalist </p>
+  </span>
+,<span class="gridstyle">
+  <div>
+    PERSONAL SUMMARY
+    A doctor to men's souls and improve them morally, while at the same time holding contempt for their obtuseness. 
+  </div>
+  <div>
+    CONTACT
+    bucketman101@aol.com
+  </div>
+  <div>
+    EDUCATION
+    Student of Antisthenes
+    Mintmaster - family trade
+  </div>
+  <div>
+    WORK REFERENCE 
+    Lives and opinions of eminent philosophers
+    Cynic epistles 
+  </div>
+
+    ACHIEVEMENTS
+    One of main contributors to Cynicism 
+    Accredited to use the word "cosmopolitan" first
+
+    CORE SKILLS
+    Love of virtue
+    Unconcerened with wealth
+    Making a cult of indifference 
+
+    WORK HISTORY
+    PHILOSOPHY SCHOOL OWNER
+    SLAVE
+    PHILOSOPHER
+    MINTMASTER
+  </p>
+</span>
+ -->
+
 	<script src="index.js"></script>
   </body>
 </html>
